# nr_urllc_S7

./: .gitmodules  README.md  README_S5_S6.md
nr_urllc_s4_3/: .gitignore  MERGE_NOTES.md  README.md  README_S1.txt  pyproject.toml
nr_urllc_s4_3/artifacts/: m0_baseline_awgn_results.json  m1_ofdm_awgn_results.json  m2_flat_allpilot.json  m2_ofdm_cdl_results.json  m2_ofdm_tdlc_auto.json  m2_ofdm_tdlc_autoramp_results.json  m2_ofdm_tdlc_results.json  urllc_budget.json
nr_urllc_s4_3/configs/: m0_baseline_awgn.yaml  m1_ofdm_awgn.yaml  m2_flat_allpilot.yaml  m2_ofdm_cdl.yaml  m2_ofdm_cdl_autoramp.yaml  m2_ofdm_cdl_bler.yaml  m2_ofdm_tdlc.yaml  m2_ofdm_tdlc_autoramp.yaml  m2_ofdm_tdlc_bler.yaml  m2_then_bler.yaml  s3_timing_example.yaml  s4_rf_comparison.yaml  s4_vlc_example.yaml
nr_urllc_s4_3/docs/: INTEGRATION_DONE.txt  README_S3.md  S3_COMPLETION_SUMMARY.md  S3_INTEGRATION_GUIDE.md  S4_ARCHITECTURE_GUIDE.md  S4_QUICK_REFERENCE.md  S4_VLC_DOCUMENTATION.md
nr_urllc_s4_3/nr_urllc/: __init__.py  autoramp.py  bler_from_m2.py  channel.py  equalize.py  fec.py  interp.py  metrics.py  modem.py  nr_cfg.py  nr_timing.py  ofdm.py  pilots.py  plots.py  repeat.py  run_ofdm_unified.py  s3_timely_bler_sweep.py  s3_timing_urllc.py  s4_vlc_channel.py  simulate.py  sweep.py  tb.py  urllc.py  utils.py
nr_urllc_s4_3/nr_urllc.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
nr_urllc_s4_3/scripts/: plot_results.py  run_bler.py  run_s3_timely_sweep.py  run_s4_vlc_sweep.py  run_sims.py  urllc_budget.py
nr_urllc_s4_3/tests/: test_awgn_qpsk.py  test_ofdm_awgn.py  test_phy.py  test_s4_vlc.py  (+3 more)
(+86 files in other folders)
